syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package forecast_weather;

service ForecastApi {
  rpc GetWeatherForecasts (google.protobuf.Empty) returns (GetWeatherForecastsResponse);
  rpc SaveWeatherForecasts (SaveWeatherForecastsRequest) returns (google.protobuf.Empty);
}

message GetWeatherForecastsResponse {
  repeated WeatherForecast forecasts = 1;
}

message SaveWeatherForecastsRequest {
  repeated WeatherForecast forecasts = 1;
}

message WeatherForecast {
  google.protobuf.Timestamp date = 1;
  Temperature temperature = 2;
  Wind wind = 3;
  int32 pressure = 4;
  int32 humidity = 5;
  int32 geomagnetic_activity = 6;
  double water_temperature = 7;
  string city = 8;
  string weather_type = 9;
}

message Temperature {
  double value = 1;
  double feels_like = 2;
}

message Wind {
  WindDirection direction = 1;
  double value = 2;
}

enum WindDirection {
  UNDEFINED = 0;
  NORTH = 1;
  WEST = 2;
  SOUTH = 3;
  EAST = 4;
  NORTH_WEST = 5;
  NORTH_EAST = 6;
  SOUTH_WEST = 7;
  SOUTH_EAST = 8;
  CALM = 9;
};
